# BundleAdjustmentInLarge

./: CMakeLists.txt  README.md  bal.cpp  initial.ply
include/: g2o_bal_class.h  problem.h  utility.h
src/: problem.cpp
